Fix: augment pre code line height.
Previously, lines were slightly overlapping, hiding for example the
descending part of the letter "g".

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -46,6 +46,7 @@ em {font-style: italic;}
 .c-content a {color: blue; text-decoration: none;}
 pre {font-size: 0.875rem; padding: 0.5rem 0.75rem; background-color: #f2f2f2;}
 code {background-color: #f2f2f2; font-family: 'DejaVu Sans Mono'; font-size: 95%;}
+pre > code {line-height: 120%;}
 hr {
   font-size: var(--step-c-4); /* like h1, for flow spacing */
   color: black;
